--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -18,7 +18,7 @@
 
   <template>
 
-      <app-location route="{{route}}"></app-location>
+      <app-location route="{{route}}" use-hash-as-path></app-location>
       <app-route route="{{route}}"
                 pattern="/dashboard/community/:threadId"
                 data="{{routeData}}"
