--- a/src/components/aq-homepage.html
+++ b/src/components/aq-homepage.html
@@ -263,7 +263,7 @@
     </style>
 
     <template>
-        <app-location route="{{route}}" ></app-location>
+        <app-location route="{{route}}"  use-hash-as-path></app-location>
         
         <app-route
             route="{{route}}"
