--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -111,7 +111,7 @@
     <template>
 
         <aq-check-authentication id='authItem'></aq-check-authentication>
-        <app-location route="{{route}}" quer-params="{{queryParams}}"></app-location>
+        <app-location route="{{route}}" quer-params="{{queryParams}}" use-hash-as-path></app-location>
 
         <app-route
             route="{{route}}"
