--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -52,7 +52,7 @@
   
   <template>
 
-        <app-location route="{{route}}"></app-location>
+        <app-location route="{{route}}" use-hash-as-path></app-location>
         <app-route route="{{route}}"
                     pattern="/dashboard/:page"
                     data="{{routeData}}">
