--- a/src/layouts/aq-editor-main.html
+++ b/src/layouts/aq-editor-main.html
@@ -26,7 +26,7 @@
   <template>
     <aq-check-authentication id='authItem'></aq-check-authentication>
     
-    <app-location route="{{route}}"></app-location>
+    <app-location route="{{route}}" use-hash-as-path></app-location>
     <app-route route="{{route}}"
                 pattern="/dashboard/editor/:strategyId"
                 data="{{routeData}}"
