--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -5,6 +5,7 @@
 
 <link rel="import" href="../common/aq-check-authentication.html">
 <link rel="import" href="../aq-markdown-editor.html">
+<link rel="import" href="../aq-html-editor.html">
 <link rel="import" href="./aq-community-previewpost.html">
 <link rel="import" href="../../dialog/aq-community-attachbacktest-dialog.html">
 
@@ -73,8 +74,8 @@
 
           <paper-button id='attachButton' class="self-end" raised noink on-tap='onAttach'>Attach<iron-icon icon="aq-icons:attach-file"></iron-icon></paper-button>
           
-          <aq-markdown-editor id="editor" place-holder="Write a reply"></aq-markdown-editor>
-          
+          <!--<aq-markdown-editor id="editor" place-holder="Write a reply"></aq-markdown-editor>-->
+            <aq-html-editor id="editor"></aq-html-editor>
           <div class="layout horizontal" id='buttons'>
               <div id='errorMessage'><i>[[error]]</i></div>
               <div class="flex"></div>
