--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -167,7 +167,7 @@
       },
 
       clearEditor: function() {
-        this.$$('#editor').setContent("");
+        this.$$('#editor').clearContent();
       },
 
       processInput: function() {
