--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -2,8 +2,8 @@
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
-<link rel="import" href="../aq-markdown-editor.html">
-
+<!--<link rel="import" href="../aq-markdown-editor.html">-->
+<link rel="import" href="../aq-html-editor.html">
 <link rel="import" href="./aq-community-postdetail-header.html">
 <link rel="import" href="./aq-community-postdetail-content.html">
 
