Removed demo comments from code-editor-element.html

--- a/src/components/code-editor-element/code-editor-element.html
+++ b/src/components/code-editor-element/code-editor-element.html
@@ -1,40 +1,3 @@
-<!--A small demo of how code editor works-->
-
-<!--<!doctype html>-->
-<!--<html>-->
-<!--<head>-->
-    <!--<meta charset="utf-8">-->
-    <!--<meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">-->
-
-    <!--<title>sauravb-element</title>-->
-
-    <!--<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>-->
-    <!--<link rel="import" href="bower_components/polymer/polymer.html">-->
-
-    <!--&lt;!&ndash; Importing the element and diff-pathch &ndash;&gt;-->
-    <!--<link rel="import" href="custom_components/code-editor-element/code-editor-element.html">-->
-    <!--<script src="custom_components/code-editor-element/diff-match-patch.js"></script>-->
-
-
-    <!--<style>-->
-
-    <!--</style>-->
-<!--</head>-->
-<!--<body>-->
-<!--<code-editor-element id="ce_element" theme="ace/theme/github"></code-editor-element>-->
-<!--<button onclick="handleClick()">Get Content</button>-->
-<!--<script type="text/javascript">-->
-    <!--var code_editor= document.querySelector('code-editor-element');-->
-    <!--var codeLeft = "var a = {\n propertyA: 12,\n propertyB: 123456, \n propertyC: 321, \n}";-->
-    <!--var codeRight = "var a = {\n propertyA: 12,\n propertyZ: 123, \n propertyC: 321, \n}";-->
-    <!--code_editor.setCodeLeft(codeLeft);-->
-    <!--code_editor.setCodeRight(codeRight);-->
-    <!--function handleClick() {-->
-        <!--console.log(code_editor.getCode());-->
-    <!--}-->
-<!--</script>-->
-<!--</body>-->
-<!--</html>-->
 <dom-module id="code-editor-element">
     <link rel="stylesheet" href="code-editor-element.css">
     <template>
@@ -56,12 +19,10 @@
             is: "code-editor-element",
             properties:{
                 codeLeft:{
-                    type:String,
-                    //value: "var a = {\n propertyA: 12,\n propertyB: 123, \n propertyC: 321, \n}"
+                    type:String
                 },
                 codeRight:{
-                    type:String,
-                    //value: "var a = {\n propertyA: 12,\n propertyZ: 123, \n propertyC: 321, \n}"
+                    type:String
                 },
                 mode:{
                     type:String,
