--- a/src/components/common/aq-loading-progress.html
+++ b/src/components/common/aq-loading-progress.html
@@ -11,7 +11,7 @@
 	<style is="custom-style">		
 		paper-progress {
 		   --paper-progress-active-color: #0375b4;
-		   --paper-progress-container-color:#f2fbf7;
+		   --paper-progress-container-color:transparent;
 		   --paper-progress-height:2px;
 		   opacity: 0.5;
 		}
