--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -2,7 +2,7 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link rel='import' href='../common/aq-check-authentication.html'>
-
+<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
 <dom-module id='aq-editor-home-menu'>
 	<style  include="iron-flex iron-flex-alignment iron-positioning"></style>
   
@@ -33,24 +33,25 @@
 		}
 
 		#searchbox {
-		  	height: 46px;
+		  	height: 32px;
 		    -webkit-appearance: none;
 		  	line-height: 46px;
 		  	border: 0;
 		  	margin: 0;
-		  	padding-left: 50px;
+		  	padding-left: 30px;
 		  	border: 1px solid #e5e5e5;
 		  	@apply(--paper-font-body1);
-		  	width:100%;
-		  	font-size: 16px;
+		  	width:80%;
+		  	font-size: 14px;
 		  	z-index: 2;
-			background-color: #eceff1;
+			background-color: #fff;
+            box-shadow:0 1px 4px rgba(0,0,0,0.2);
+            transition: all 0.4s ease-in-out;
 		}
 
 		#searchbox:focus {
 	  		outline: 0;
-		  	background-color: #eceff1;
-		  	border-color: #cfd8dc;
+		  	background-color: #f7f7f7;
 		}
 
 		#searchbox::-webkit-search-cancel-button{
@@ -59,10 +60,14 @@
 		}
 
 		.toolbar {
-			height: 60px;
+			height: 42px;
 			width: 100%;
-		    margin-bottom: 10px
+		    margin-bottom: 20px;
 		    margin-top:0px;
+			background-color: #e9e9e9;
+            box-shadow:0 4px 8px rgba(0,0,0,0.2);
+            display: flex;
+            align-items: center;
 		}
 
 		#menu-icons {
@@ -72,7 +77,6 @@
 		}
 
 		.iconButton {
-			outline:1px solid teal;
 			padding:5px;
 			width:35px;
     		margin-right: 5px;
@@ -103,6 +107,30 @@
         	--paper-tooltip-opacity: 1.0;
 			--paper-tooltip-background: teal;
 		}
+        .search-bar{
+            width: 95%;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        paper-button{
+            border:none;
+            font-size: 13px;
+            background-color: teal;
+            color:#fff;
+            padding: 0 20px;
+            border-radius: 2px;
+            height:35px;
+        }
+        .strategy-header{
+            font-size: 14px;
+            margin-left: 20px;
+        }
+        .toolbar .checkbox-all{
+            position: relative;
+            margin-left:30px;
+        }
 		
 	</style>
 	
@@ -110,33 +138,39 @@
 		<aq-check-authentication id='authItem'></aq-check-authentication>
 
 	    <div class="toolbar layout horizontal">
-	    
-	    	<div class="flex self-center"><p>All Strategies</p></div>
-	      	<div id="search" class="flex">	    	
-	    		<paper-icon-button noink title="Go Back" icon="aq-icons:arrow-back" on-tap="toggle"></paper-icon-button>
-      			<input id="searchbox" placeholder="Search your strategy" class="flex"
-             	value="{{searchText::change}}" type="search"
-             	on-keydown="checkForKeys" on-blur='blur'>
-        	</div>
+            <paper-checkbox class="checkbox-all"></paper-checkbox>
+	    	<div class="flex self-center"><p class="strategy-header">ALL STRATEGIES</p></div>
+	      	<!--<div id="search" class="flex">-->
+	    		<!--<paper-icon-button noink title="Go Back" icon="aq-icons:arrow-back" on-tap="toggle"></paper-icon-button>-->
+      			<!--<input id="searchbox" placeholder="Search your strategy" class="flex"-->
+             	<!--value="{{searchText::change}}" type="search"-->
+             	<!--on-keydown="checkForKeys" on-blur='blur'>-->
+        	<!--</div>-->
 
 	      	<div id='menu-icons' class="layout horizontal">
-	      		<paper-icon-button id= 'searchIcon' noink class="iconButton" icon="aq-icons:search" on-tap="toggle" raised>	
-	      		</paper-icon-button>
-      		
-	      		<paper-icon-button id= 'newIcon' noink class="iconButton" icon="aq-icons:add" on-tap="createNew">	
+	      		<!--<paper-icon-button id= 'searchIcon' noink class="iconButton" icon="aq-icons:search" on-tap="toggle" raised>-->
+	      		<!--</paper-icon-button>-->
+
+	      		<paper-icon-button id= 'newIcon' noink class="iconButton" icon="aq-icons:add" on-tap="createNew">
 	      		</paper-icon-button>
 
 	  			<paper-icon-button id= 'deleteIcon' noink class="iconButton" icon="aq-icons:delete" on-tap="onDelete" disabled="[[!activeDelete]]">
 	  			</paper-icon-button>
-			</div> 
+			</div>
 
 			<paper-tooltip for='searchIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>Search</paper-tooltip>
-        	
+
         	<paper-tooltip for='newIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>New</paper-tooltip>
-        	
+
         	<paper-tooltip for='deleteIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>Delete</paper-tooltip>
-        	     	
+
   		</div>
+		<div class="search-bar">
+			<input id="searchbox" placeholder="Search your strategy" class="flex"
+				   value="{{searchText::change}}"
+				   on-keydown="checkForKeys" on-blur='blur'>
+            <paper-button raised class="btn search-btn">Search</paper-button>
+		</div>
 
 	</template>
 	
