--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -215,6 +215,11 @@
             margin-right: 40px;
         }
 
+        paper-checkbox {
+            --paper-checkbox-checked-color: #cc6666;
+
+        }
+
         .st-row-item {
             position: relative;
             display: flex;
@@ -252,6 +257,7 @@
 
         .li2-header, .li2-detail {
             transition: all 0.3s ease-in-out 0.3s;
+            color: transparent;
         }
 
         .st-header-div {
@@ -281,13 +287,14 @@
         }
 
         .side-bar {
-            background-color: #cc6666;
+            background-color: transparent;
             width: 5px;
             height: 100%;
             position: absolute;
             top: 0;
             border-bottom-left-radius: 2px;
             border-top-left-radius: 2px;
+            transition: all 0.4s ease-in-out;
         }
 
         #share-btn {
@@ -312,87 +319,104 @@
         <div class="st-row-item">
             <div class="side-bar"></div>
             <div class="st-header-div">
-                <paper-checkbox></paper-checkbox>
-                <span class="st-item-header">BackTest 1</span>
-                <paper-icon-button id="share-btn" class="st-toolbar-icon" icon="social:share"
+                <paper-checkbox id='checkbox' noink on-change='onCheck'></paper-checkbox>
+                <span class="st-item-header">BackTest [[formatIndex(index)]]</span>
+                <paper-icon-button on-tap="onShare" id="share-btn" class="st-toolbar-icon" icon="social:share"
                                    title="Share"></paper-icon-button>
-                <paper-icon-button id="trending-btn" class="st-toolbar-icon" icon="trending-up"
+                <paper-icon-button on-tap="onBacktestDetail" id="trending-btn" class="st-toolbar-icon"
+                                   icon="trending-up"
                                    title="Trending"></paper-icon-button>
             </div>
             <div class="st-content-div">
                 <ul class="st-item-ul1">
                     <li class="st-item-li1"><h4 class="st-li-header">Created: <span
-                            class="st-li-detail">09/01/2017 09:53 PM</span></h4></li>
-                    <li class="st-item-li1"><h4 class="st-li-header">Date Range: <span class="st-li-detail">10/01/2017 - 07/01/2017</span>
+                            class="st-li-detail">[[processedBacktest.createdAt]]</span></h4></li>
+                    <li class="st-item-li1"><h4 class="st-li-header">Date Range: <span class="st-li-detail">[[processedBacktest.startDate]] - [[processedBacktest.endDate]]</span>
                     </h4></li>
                     <li class="st-item-li1"><h4 class="st-li-header">Running Time: <span class="st-li-detail">52s</span>
                     </h4></li>
-                    <li class="st-item-li1"><h4 class="st-li-header">Status: <span class="st-li-detail">Complete</span>
+                    <li class="st-item-li1"><h4 class="st-li-header">Status: <span class="st-li-detail">[[processedBacktest.status]]</span>
                     </h4>
                     </li>
-                    <li class="st-item-li1"><h4 class="st-li-header">Information Ratio: <span
-                            class="st-li-detail">0.79</span></h4></li>
+                    <!--<li class="st-item-li1"><h4 class="st-li-header">Information Ratio: <span-->
+                    <!--class="st-li-detail">0.79</span></h4></li>-->
                 </ul>
                 <hr class="hr1">
                 <ul class="strategy-item-ul2">
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Total Return</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Annual Return</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Volatility</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Sharp Ratio</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Information Ratio</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Max Drawdon</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Calmar Ratio</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
-                    <li class="st-item-li2">
-                        <div class="st-item-div ">
-                            <h3 class="st-li-header li2-header">Beta</h3>
-                            <h5 class="st-li-detail li2-detail">-10.45%</h5>
-                        </div>
-                    </li>
+                    <template is='dom-repeat' items="{{processedBacktest.metrics1}}">
+                        <li class="st-item-li2">
+                            <div class="st-item-div ">
+                                <!--<h3 class="st-li-header li2-header">[[processedBacktest.metrics1[0].metricName]]</h3>-->
+                                <h3 class="st-li-header li2-header">[[item.metricName]]</h3>
+                                <h5 class="st-li-detail li2-detail">[[item.metricValue]]</h5>
+                            </div>
+                        </li>
+                    </template>
+                    <template is='dom-repeat' items="{{processedBacktest.metrics2}}">
+                        <li class="st-item-li2">
+                            <div class="st-item-div ">
+                                <!--<h3 class="st-li-header li2-header">[[processedBacktest.metrics1[0].metricName]]</h3>-->
+                                <h3 class="st-li-header li2-header">[[item.metricName]]</h3>
+                                <h5 class="st-li-detail li2-detail">[[item.metricValue]]</h5>
+                            </div>
+                        </li>
+                    </template>
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Annual Return</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Volatility</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Sharp Ratio</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Information Ratio</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Max Drawdon</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Calmar Ratio</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <!--<li class="st-item-li2">-->
+                    <!--<div class="st-item-div ">-->
+                    <!--<h3 class="st-li-header li2-header">Beta</h3>-->
+                    <!--<h5 class="st-li-detail li2-detail">-10.45%</h5>-->
+                    <!--</div>-->
+                    <!--</li>-->
                 </ul>
                 <hr class="bottom-header">
             </div>
-            <paper-icon-button id="expand-btn" class="pink" icon="expand-more" title="Expand"></paper-icon-button>
+            <paper-icon-button on-tap="expandCard" id="expand-btn" class="pink" icon="expand-more"
+                               title="Expand"></paper-icon-button>
         </div>
     </template>
     <script>
         Polymer({
             is: 'aq-analyze-home-backtest-item2',
-
+            expand: {
+                type: Boolean,
+                value: true
+            },
             properties: {
                 backtest: {
                     type: Object,
@@ -426,31 +450,11 @@
 
             attached: function () {
                 this.backtestId = this.backtest._id;
+
             },
 
             ready: function () {
-                var expand = true;
-                var row = this.$$('.st-content-div');
-                var h3 = Polymer.dom(this.root).querySelectorAll('.li2-header');
-                var h5 = Polymer.dom(this.root).querySelectorAll('.li2-detail');
-                var expandBtn = this.$$('#expand-btn');
-                changeColor(h3, "transparent");
-                changeColor(h5, "transparent");
-                expandBtn.addEventListener('click', function () {
-                    if (expand) {
-                        row.style.maxHeight = "400px";
-                        changeColor(h3, "#000");
-                        changeColor(h5, "#000");
-                        expandBtn.style.transform="rotate(180deg)";
-                        expand = false;
-                    } else {
-                        row.style.maxHeight = "45px";
-                        changeColor(h3, "transparent");
-                        changeColor(h5, "transparent");
-                        expandBtn.style.transform="rotate(0deg)";
-                        expand = true;
-                    }
-                });
+
                 this.set('processedBacktest.metrics1', [{
                     "metricName": "Total Return",
                     "metricValue": "-",
@@ -503,6 +507,29 @@
                      "metricDescription":"Avg. Concentration"
                      },*/]);
                 this.processBacktestData();
+
+            },
+            expandCard: function () {
+
+                var row = this.$$('.st-content-div');
+                var h3 = Polymer.dom(this.root).querySelectorAll('.li2-header');
+                var h5 = Polymer.dom(this.root).querySelectorAll('.li2-detail');
+                var expandBtn = this.$$('#expand-btn');
+                changeColor(h3, "transparent");
+                changeColor(h5, "transparent");
+                if (this.expand) {
+                    row.style.maxHeight = "400px";
+                    changeColor(h3, "#000");
+                    changeColor(h5, "#000");
+                    expandBtn.style.transform = "rotate(180deg)";
+                    this.expand = false;
+                } else {
+                    row.style.maxHeight = "45px";
+                    changeColor(h3, "transparent");
+                    changeColor(h5, "transparent");
+                    expandBtn.style.transform = "rotate(0deg)";
+                    this.expand = true;
+                }
 
             },
 
@@ -611,7 +638,12 @@
             },
 
             onCheck: function () {
-                this.fire('backtestChecked', {id: this.backtest._id, checked: this.$.checkbox.checked})
+                this.fire('backtestChecked', {id: this.backtest._id, checked: this.$.checkbox.checked});
+                if (this.$.checkbox.checked) {
+                    this.$$('.side-bar').style.backgroundColor = "#cc6666";
+                } else {
+                    this.$$('.side-bar').style.backgroundColor = "#fff";
+                }
             },
 
             onBacktestDetail: function () {
