--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -15,6 +15,7 @@
             font-family: 'Lato', sans-serif;
             font-size: 16px;
             border-radius:2px;
+            margin-bottom: 20px;
         }
 
         :host:hover {
